--- a/frontend/stories/brand/logo.mdx
+++ b/frontend/stories/brand/logo.mdx
@@ -1,5 +1,256 @@
 import { Meta } from "@storybook/blocks";
+import { Unstyled } from '@storybook/blocks';
 
 <Meta title="Brand/Logo" />
 
-# Simpler.Grants.Gov Logo
+<style>
+{`
+  .logo-page {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    color: #333;
+    line-height: 1.6;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .logo-page h1 {
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin-bottom: 1.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid #eaecef;
+  }
+  
+  .logo-page h2 {
+    font-size: 1.75rem;
+    font-weight: 600;
+    margin-top: 2.5rem;
+    margin-bottom: 1rem;
+    padding-bottom: 0.3rem;
+    border-bottom: 1px solid #eaecef;
+  }
+  
+  .logo-page p {
+    margin-bottom: 1.5rem;
+  }
+  
+  .logo-page figure {
+    margin: 2rem 0;
+    text-align: center;
+  }
+  
+  .logo-page figure img {
+    max-width: 100%;
+    border: 1px solid #e0e0e0;
+    border-radius: 4px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  }
+  
+  .logo-page figcaption {
+    font-size: 0.9rem;
+    color: #666;
+    margin-top: 0.5rem;
+  }
+  
+  .dont-examples {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+    margin: 2rem 0;
+  }
+  
+  .dont-item {
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+  
+  .dont-item:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
+  
+  .dont-item .img-container {
+    position: relative;
+    width: 100%;
+    height: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f5f5;
+    padding: 1rem;
+  }
+  
+  .dont-item img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+  
+  .dont-item p {
+    padding: 1rem;
+    margin: 0;
+    font-weight: 500;
+    background-color: #fff;
+    border-top: 1px solid #e0e0e0;
+  }
+  
+  .change-log-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 2rem 0;
+  }
+  
+  .change-log-table th,
+  .change-log-table td {
+    border: 1px solid #e0e0e0;
+    padding: 0.75rem 1rem;
+    text-align: left;
+  }
+  
+  .change-log-table th {
+    background-color: #f5f5f5;
+    font-weight: 600;
+  }
+  
+  .change-log-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+  
+  .unapproved-colors img,
+  .apply-effects img,
+  .stretch-distort img,
+  .outline img,
+  .low-contrast img,
+  .adjust-scale img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+  
+  .adjust-spacing .img-container::before,
+  .change-typeface .img-container::after {
+    display: none;
+  }
+  
+  .low-contrast {
+    background-color: transparent;
+  }
+`}
+</style>
+
+<div className="logo-page">
+
+# Logo
+
+The logo is our primary identifier. It contains both the star symbol and our name in the wordmark. It should be used most often to represent our brand, positioning Grants.gov as a trusted and innovative organization dedicated to increasing access to grants and improving the grants experience for everyone.
+
+The logo is used most often as it captures more of our brand characters. The symbol and wordmark are next frequently used, while the favicon is reserved only for specific digital applications.
+
+The symbol and wordmark have been carefully scaled, spaced, and aligned to create the logo. Do not alter its construction.
+
+<Unstyled>
+  <figure>
+    <img src="/brand/images/Simpler-Grants-Logo-Overview.jpg" alt="Simpler Grants Logo Overview" />
+  </figure>
+</Unstyled>
+
+## Star Symbol
+
+The logo features a unique five-pointed star composed of double lines. The star, a timeless symbol of trust and guidance, speaks directly to Grants.gov's purpose and focus as a federal organization. Each double line is a pathway radiating out from the central star, symbolizing openness, accessibility, and helping others achieve their goals.
+
+<Unstyled>
+  <figure>
+    <img src="/brand/images/Simpler-Grants-Star-Symbol.png" alt="Simpler Grants Star Symbol" />
+  </figure>
+</Unstyled>
+
+## Wordmark
+
+The wordmark features our name only. Use it in supportive applications, especially when the audience is already very familiar with our brand and identity.
+
+<Unstyled>
+  <figure>
+    <img src="/brand/images/Simpler-Grants-WordMark.png" alt="Simpler Grants WordMark" />
+  </figure>
+</Unstyled>
+
+## Favicon
+
+The favicon uses our star symbol in a circle container shape to help with legibility in small or complex environments. Only use it when necessary; never pair it with the wordmark or logo.
+
+<Unstyled>
+  <figure>
+    <img src="/brand/images/Simpler-Grants-Favicon.png" alt="Simpler Grants Favicon" />
+  </figure>
+</Unstyled>
+
+## Examples
+
+Below are some examples of the logo in use.
+
+<Unstyled>
+  <figure>
+    <img src="/brand/images/Logo-examples.png" alt="Logo examples" />
+  </figure>
+</Unstyled>
+
+## Additional Don'ts
+
+Do not diminish the value of our identity. Avoid the following treatments.
+
+<Unstyled>
+  <div className="dont-examples">
+    <div className="dont-item">
+      <div className="img-container">
+        <img src="/brand/images/simpler-grants-logo-unapproved-colors.png" alt="Do not use unapproved colors" />
+      </div>
+      <p>Do not use unapproved colors.</p>
+    </div>
+    <div className="dont-item">
+      <div className="img-container">
+        <img src="/brand/images/simpler-grants-logo-dont-apply-effects.png" alt="Do not apply effects" />
+      </div>
+      <p>Do not apply effects.</p>
+    </div>
+    <div className="dont-item">
+      <div className="img-container">
+        <img src="/brand/images/simpler-grants-logo-dont-adjust-the-spacing.png" alt="Do not adjust the spacing" />
+      </div>
+      <p>Do not adjust the spacing.</p>
+    </div>
+    <div className="dont-item">
+      <div className="img-container">
+        <img src="/brand/images/simpler-grants-logo-dont-stretch-or-distort.png" alt="Do not stretch or distort" />
+      </div>
+      <p>Do not stretch or distort.</p>
+    </div>
+    <div className="dont-item">
+      <div className="img-container">
+        <img src="/brand/images/simpler-grants-logo-dont-outline.png" alt="Do not outline" />
+      </div>
+      <p>Do not outline.</p>
+    </div>
+    <div className="dont-item">
+      <div className="img-container">
+        <img src="/brand/images/simpler-grants-logo-dont-use-low-contrast-combinations.png" alt="Do not use low-contrast combinations" />
+      </div>
+      <p>Do not use low-contrast combinations.</p>
+    </div>
+    <div className="dont-item">
+      <div className="img-container">
+        <img src="/brand/images/simpler-grants-logo-dont-change-the-typeface.png" alt="Do not change the typeface" />
+      </div>
+      <p>Do not change the typeface.</p>
+    </div>
+    <div className="dont-item">
+      <div className="img-container">
+        <img src="/brand/images/simpler-grants-logo-dont-adjust-scale.png" alt="Do not adjust the scale" />
+      </div>
+      <p>Do not adjust the scale.</p>
+    </div>
+  </div>
+</Unstyled>
+</div>
