correcting file name

--- a/frontend/stories/brand/font.mdx
+++ b/frontend/stories/brand/font.mdx
@@ -132,11 +132,17 @@ Public Sans is a strong, neutral, open-source typeface for interfaces, text, and
 
 <Unstyled>
   <figure>
-     <img src="/brand/fonts/Simple-grants-Primary-Typeface-PublicSans.png" alt="Simpler Grants Public Sans Overview" />
+     <img src="/brand/fonts/simple-grants-primary-typeface-PublicSans.png" alt="Simpler Grants Public Sans Overview" />
   </figure>
 </Unstyled>
 
-Public Sans is already included in USWDS but should be added to HHS staff computers to maintain brand alignment in Simpler Grants material.
+<p> <a href="https://fonts.google.com/specimen/Public+Sans"> Download Public Sans </a>. Public Sans is already included in USWDS but should be added to HHS staff computers to maintain brand alignment in Simpler Grants material.</p>
+
+<Unstyled>
+  <figure>
+     <img src="/brand/fonts/simpler-grants-PublicSans-weights.png" alt="Public Sans weights" />
+  </figure>
+</Unstyled>
 
 ## Secondary Typeface
 # Newsreader
@@ -145,11 +151,11 @@ Newsreader is an open-source font from Production Type designed for on-screen, l
 
 <Unstyled>
   <figure>
-    <img src="/brand/fonts/Simple-grants-Secondary-Typeface-Newreader.png" alt="Simpler Grants Newsreader" />
+    <img src="/brand/fonts/simple-grants-secondary-typeface-Newreader.png" alt="Simpler Grants Newsreader" />
   </figure>
 </Unstyled>
 
-<p> <a href="https://fonts.google.com/specimen/Public+Sans"> Download NewsReader </a>. It is already included in USWDS but should be added to HHS staff computers to maintain brand alignment in Simpler Grants material.</p>
+<p> <a href="https://fonts.google.com/specimen/Newsreader"> Download NewsReader </a>. It should be added to HHS staff computers to maintain brand alignment.</p>
 
 <Unstyled>
   <figure>
